--- a/src/main/resources/templates/story.html
+++ b/src/main/resources/templates/story.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- TODO: change path -->
-    <img src="../static/media/logo.png" alt="One Word Story Logo" width="50px" height="50px" onclick="location.href = '/'"></a>
+    <img src="../static/media/logo.png" alt="One Word Story Logo" width="50px" height="50px" onclick="location.href = '/'">
 
     <div class="row">
 
@@ -78,7 +78,6 @@
                     <p  class="comment">
                         <b th:text="${comment.displayName()}"></b> <br>
                     <p th:text="${comment.content()}"></p>
-                    </p>
                 </div>
                 <div th:if="${#lists.isEmpty(comments)}" class="comments">
                     <p class="comment">
@@ -92,10 +91,14 @@
             <div class="center">
                 <form method="POST" th:object="${commentBuilder}"
                       th:action="@{comment/story/{id}(id = ${story.id()})}" id="comment-story-form">
-                    <!--The placeholder works only when the tag is on one line !-->
-                    <textarea placeholder="Your comment" th:field="*{content}" id ="userComment" rows="5" cols="42" name="comment"></textarea>
+                    <textarea placeholder="Your comment" th:field="*{content}" id ="userComment" rows="5" cols="42"
+                              name="comment"></textarea>
                     <br>
-                    Comment as Guest: <input id="userName" th:field="*{displayName}" type="text" name="guest_name" placeholder="Enter a Guest Name...">
+
+                    <label for="userName">Comment as: </label>
+A                    <input id="userName" th:field="*{displayName}" type="text" name="guest_name"
+                           placeholder="Enter your name...">
+
                     <input type="submit" value="Submit">
                 </form>
             </div>
