--- a/src/main/resources/templates/endscreen.html
+++ b/src/main/resources/templates/endscreen.html
@@ -1,31 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lobster" />
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/endscreen.css">
-
+    <link rel="stylesheet" href="../static/css/endscreen.css">
     <title>Game Summary</title>
 </head>
 
 <body>
+    <h1>Game Summary</h1>
 
-    <h1> ~~ Game Summary ~~ </h1>
-
-    <div class="row">
-
-    </div>
+    <div class="row"></div>
 
     <br>
 
     <div class="center">
-        <button class="button button1" onclick="window.location.href='/play';"> Continue </button>
+        <button class="button" onclick="window.location.href='/play';">Continue</button>
     </div>
 
 </body>
 
-<script src="js/libs/jquery.js"> </script>
-<script src="js/endscreen.js"> </script>
+<!--<script src="../static/js/libs/jquery.js"> </script>-->
+<!--<script src="../static/js/endscreen.js"> </script>-->
 
 </html>
