--- a/src/main/resources/static/css/endscreen.css
+++ b/src/main/resources/static/css/endscreen.css
@@ -46,23 +46,81 @@ a {
 }
 
 .button {
-    padding: 16px 32px;
-    text-align: center;
-    display: inline-block;
-    font-size: 16px;
-    transition-duration: 0.4s;
+    min-width: 150px;
+    min-height: 60px;
+    font-family: 'Nunito', sans-serif;
+    font-size: 22px;
+    text-transform: uppercase;
+    letter-spacing: 1.3px;
+    font-weight: 700;
+    color: var(--color3);
+    background: #4FD1C5;
+    background: linear-gradient(90deg, var(--color1) 0%, var(--color4) 100%);
+    border: none;
+    border-radius: 1000px;
+    box-shadow: 12px 12px 24px var(--color1);
+    transition: all 0.3s ease-in-out 0s;
     cursor: pointer;
-    background-color: var(--color3);
+    outline: none;
+    position: relative;
+    padding: 10px;
+}
+
+.button::before {
+    content: '';
+    border-radius: 1000px;
+    min-width: calc(300px + 12px);
+    min-height: calc(60px + 12px);
+    border: 6px solid var(--color1);
+    box-shadow: 0 0 60px var(--color1);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: all .3s ease-in-out 0s;
+}
+
+.button:hover, .button:focus {
     color: var(--color1);
-    border: 2px solid var(--color2);
-    margin: auto;
+    transform: translateY(-6px);
 }
 
-
-.button:hover {
-    background-color: var(--color5);
-    color: var(--color4);
+.button:hover::before, .button:focus::before {
+    opacity: 1;
 }
+
+.button::after {
+    content: '';
+    width: 30px; height: 30px;
+    border-radius: 100%;
+    border: 6px solid var(--color1);
+    position: absolute;
+    z-index: -1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: ring 1.5s infinite;
+}
+
+.button:hover::after, .button:focus::after {
+    animation: none;
+    display: none;
+}
+
+@keyframes ring {
+    0% {
+        width: 30px;
+        height: 30px;
+        opacity: 1;
+    }
+    100% {
+        width: 150px;
+        height: 150px;
+        opacity: 0;
+    }
+}
+
 
 .center {
     display: flex;
