Redesign play page

--- a/src/main/resources/templates/play.html
+++ b/src/main/resources/templates/play.html
@@ -76,6 +76,7 @@
 
             <!-- exit icon -->
             <div class="column" id="close_button">
+<!--                TODO: change path-->
                 <img id="exit-game-button" style="vertical-align:middle" src="media/exit.png" width="50" alt="Close">
             </div>
         </div>
