--- a/src/main/resources/static/css/play.css
+++ b/src/main/resources/static/css/play.css
@@ -8,24 +8,35 @@
 
  */
 
- @font-face {
-    font-family: 'Lobster';
-    src: url('/media/fonts/Lobster.ttf');
+
+:root {
+    --color1: #985b26;
+    --color2: #4f3324;
+    --color3: #f3e3c5;
+    --color4: #cba588;
+    --color5: #9e724d;
 }
 
-/* main colors of the website */
-:root {
-    --color1: #17252a;
-    --color2: #2b7a78;
-    --color3: #3aafa9;
-    --color4: #def2f1;
-    --color5: #feffff;
-    --parchment: #fffbdf;
+body {
+    background: var(--color3);
+    color: var(--color1);
+}
+
+h1 {
+    text-align: center;
+    font-family: Bradley Hand, cursive;
+    font-size: 50px;
+    color: var(--color4);
+    text-shadow: 5px 5px var(--color1);
+}
+
+a {
+    color: var(--color2);
 }
 
 @keyframes flashingText {
     50%{
-        color: #17252a;
+        color: var(--color2);
     }
 }
 
@@ -84,9 +95,8 @@
 }
 
 .flashing-text {
-    color: #feffff;
+    color: var(--color5);
     font-size: 20px;
-    font-family: Lobster;
     animation: flashingText 3s ease-in-out infinite;
 }
 
@@ -95,7 +105,11 @@ input:invalid {
 }
 
 input:invalid:required {
-    background-color: var(--color2);
+    background-color: var(--color5);
+}
+
+input:valid {
+    background-color: var(--color4);
 }
 
 /* remove dots from unordered list of players */
@@ -104,23 +118,19 @@ ul {
 }
 
 .button {
-    transition-duration: 0.4s;
-    display: inline-block;
     min-width: 150px;
     min-height: 60px;
     font-family: 'Nunito', sans-serif;
     font-size: 22px;
     text-transform: uppercase;
     letter-spacing: 1.3px;
-    font-size: 16px;
-    font-family: Lobster;
     font-weight: 700;
-    color: #313133;
+    color: var(--color3);
     background: #4FD1C5;
-    background: linear-gradient(90deg, rgba(129,230,217,1) 0%, rgba(79,209,197,1) 100%);
+    background: linear-gradient(90deg, var(--color1) 0%, var(--color4) 100%);
     border: none;
     border-radius: 1000px;
-    box-shadow: 12px 12px 24px rgba(79,209,197,.64);
+    box-shadow: 12px 12px 24px var(--color1);
     transition: all 0.3s ease-in-out 0s;
     cursor: pointer;
     outline: none;
@@ -133,8 +143,8 @@ ul {
     border-radius: 1000px;
     min-width: calc(300px + 12px);
     min-height: calc(60px + 12px);
-    border: 6px solid #00FFCB;
-    box-shadow: 0 0 60px rgba(0,255,203,.64);
+    border: 6px solid var(--color1);
+    box-shadow: 0 0 60px var(--color1);
     position: absolute;
     top: 50%;
     left: 50%;
@@ -144,7 +154,7 @@ ul {
 }
 
 .button:hover, .button:focus {
-    color: #313133;
+    color: var(--color1);
     transform: translateY(-6px);
 }
 
@@ -156,18 +166,31 @@ ul {
     content: '';
     width: 30px; height: 30px;
     border-radius: 100%;
-    border: 6px solid #00FFCB;
+    border: 6px solid var(--color1);
     position: absolute;
-    z-index: -10;
+    z-index: -1;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    animation: buttonRing 1.5s infinite;
+    animation: ring 1.5s infinite;
 }
 
 .button:hover::after, .button:focus::after {
     animation: none;
     display: none;
+}
+
+@keyframes ring {
+    0% {
+        width: 30px;
+        height: 30px;
+        opacity: 1;
+    }
+    100% {
+        width: 150px;
+        height: 150px;
+        opacity: 0;
+    }
 }
 
 .button1 {
@@ -232,7 +255,7 @@ ul {
     border-style: solid;
     height: 300px;
     overflow-y:scroll;
-    background: linear-gradient(to bottom, var(--parchment), var(--color4));
+    background-image: url("../media/parchment.png");
     padding: 10px;
     border-radius: 5px;
 }
@@ -246,7 +269,7 @@ ul {
 }
 
 #players-list {
-    background: linear-gradient(to bottom, var(--parchment), var(--color4));
+    background-image: url("../media/parchment.png");
     border-radius: 5px;
     overflow: hidden;
     padding: 15px 20px 10px 20px;
@@ -267,7 +290,7 @@ ul {
     align-items: center;
     justify-content: center;
     flex-direction: row;
-    margin: 20px 17% 0px 30%;
+    margin: 20px 17% 0 30%;
 }
 
 #word {
@@ -281,12 +304,12 @@ ul {
 }
 
 #word:focus {
-    background-color: var(--parchment);
+    background-image: url("../media/parchment.png");;
     outline: none;
 }
 
 #submit-word-button {
-    background-color: #1a6124;
+    background-color: var(--color2);
     font-family: OCR A Std, monospace;
     border: none;
     color: white;
@@ -380,8 +403,8 @@ ul {
 
 /*---------------------------- MINI LOADING ICON*/
 .loader {
-    border: 4px solid #f3f3f3; /* Light grey */
-    border-top: 4px solid #3498db; /* Blue */
+    border: 4px solid var(--color4);
+    border-top: 4px solid var(--color5); /* Blue */
     border-radius: 50%;
     width: 20px;
     height: 20px;
