--- a/src/main/resources/templates/play.html
+++ b/src/main/resources/templates/play.html
@@ -59,24 +59,18 @@
 
                 <div id="players-list-container">
                     <h3 id="players-list-title" class="game-fancy-title">Authors</h3>
-
-                    <div id="players-list">
-
-                    </div>
+                    <div id="players-list"></div>
                 </div>
             </div>
 
             <!-- story -->
             <div id="story_column" class="column">
                 <h3 class="story-title game-fancy-title" >Your Story</h3>
-                <div id="story">
-                    Lorem ipsum dolor sit amet
-                </div>
+                <div id="story"></div>
             </div>
 
             <!-- exit icon -->
             <div class="column" id="close_button">
-<!--                TODO: change path-->
                 <img id="exit-game-button" style="vertical-align:middle" src="media/exit.png" width="50" alt="Close">
             </div>
         </div>
