--- a/src/main/resources/templates/play.html
+++ b/src/main/resources/templates/play.html
@@ -40,13 +40,11 @@
 <!------------------------------------------------ WAITING PAGE -->
     <div id="waiting_page">
         <div class="center">
-            <div class="ring">
-
-            </div>
-            <span class="flashing-text"> Looking for lobby... </span>
+            <div class="ring"></div>
+            <span class="flashing-text">Looking for lobby...</span>
         </div>
         <div class="center2">
-            <button id="cancel-button" class="button button1"> Cancel </button>
+            <br><br><button id="cancel-button" class="button">Cancel</button>
         </div>
     </div>
 
