--- a/src/main/resources/templates/story.html
+++ b/src/main/resources/templates/story.html
@@ -96,7 +96,7 @@
                     <br>
 
                     <label for="userName">Comment as: </label>
-A                    <input id="userName" th:field="*{displayName}" type="text" name="guest_name"
+                    <input id="userName" th:field="*{displayName}" type="text" name="guest_name"
                            placeholder="Enter your name...">
 
                     <input type="submit" value="Submit">
