Logo fix and return paths

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -21,6 +21,10 @@ a {
     color: var(--color2);
 }
 
+img {
+    border-radius: 50%;
+}
+
 #allStoriesByTwo {
     height: 600px;
     overflow-y: scroll;
