--- a/src/main/resources/templates/endscreen.html
+++ b/src/main/resources/templates/endscreen.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../static/css/endscreen.css">
+    <link rel="stylesheet" href="css/endscreen.css">
     <title>Game Summary</title>
 </head>
 
@@ -20,7 +20,7 @@
 
 </body>
 
-<!--<script src="../static/js/libs/jquery.js"> </script>-->
-<!--<script src="../static/js/endscreen.js"> </script>-->
+<script src="js/libs/jquery.js"> </script>
+<script src="js/endscreen.js"> </script>
 
 </html>
