--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,8 +9,8 @@
 <body>
     <div id="name_logo">
         <h1>One Word Story</h1>
-        <!-- TODO: change logo background -->
-        <!-- <img src="media/logo.png" alt="One Word Story Logo"> -->
+        <img src="media/logo.png" alt="One Word Story Logo" width="75px" height="75px">
+        <br><br>
     </div>
 
     <div class="container">
