Make autofocus on word input

--- a/src/main/resources/templates/play.html
+++ b/src/main/resources/templates/play.html
@@ -75,7 +75,7 @@
 
         <!-- submit a word -->
         <div id="submit-word-container">
-            <input placeholder="Enter a word..." type="text" id="word" name="word">
+            <input placeholder="Enter a word..." type="text" id="word" name="word" autofocus>
             <button id="submit-word-button" type="button"> Submit </button>
             <span id="seconds-left" class="flashing-text">0s</span>
         </div>
