--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -10,18 +10,44 @@ body {
     background: var(--color3);
 }
 
+#header {
+    background-image: url("../media/books.jpg");
+    background-size: 1510px;
+}
+
 h1 {
     font-family: Bradley Hand, cursive;
-    font-size: 50px;
-    color: var(--color4);
-    text-shadow: 5px 5px var(--color1);
+    text-shadow: 7px 7px var(--color3);
+    text-transform: uppercase;
+    background-image: linear-gradient(
+            -225deg,
+            var(--color2) 0%,
+            var(--color1) 29%,
+            var(--color5) 67%,
+            var(--color4) 100%
+    );
+    background-clip: border-box;
+    background-size: 200% auto;
+    color: #fff;
+    text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: textclip 2s linear infinite;
+    display: inline-block;
+    font-size: 80px;
+}
+
+@keyframes textclip {
+    to {
+        background-position: 200% center;
+    }
 }
 
 a {
     color: var(--color2);
 }
 
-img {
+#logo {
     border-radius: 50%;
 }
 
@@ -60,7 +86,7 @@ h2 {
 }
 
 .container {
-     height: 150px;
+     height: 100px;
      position: relative;
 }
 
@@ -108,7 +134,7 @@ h2 {
 }
 
 .button:hover, .button:focus {
-    color: var(--color1);
+    color: var(--color2);
     transform: translateY(-6px);
 }
 
