--- a/src/main/resources/templates/play.html
+++ b/src/main/resources/templates/play.html
@@ -13,7 +13,7 @@
     <div id="play_page">
         <!-- game logo -->
         <div id="play-logo-container">
-            <img src="media/logo.png" alt="logo" onclick="location.href = '/'">
+            <img id="logo" src="media/logo.png" alt="logo" onclick="location.href = '/'">
         </div>
 
         <!-- form where you need to enter your name and submit it -->
