--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../static/css/index.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>One Word Story</title>
 </head>
 
 <body>
     <div id="header">
         <div id="name_logo">
-            <img style="float:left; margin:2px" id="logo" src="../static/media/logo.png" alt="One Word Story Logo" width="75px" height="70px">
+            <img id="logo" src="media/logo.png" alt="One Word Story Logo" width="75px" height="70px">
             <h1>One Word Story</h1>
         </div>
 
