--- a/src/main/resources/static/css/story.css
+++ b/src/main/resources/static/css/story.css
@@ -68,24 +68,53 @@ h3 {
 p.story{
     border-radius: 10px;
     background-image: url('../media/parchment.png');
-    border-color: var(--color2);
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
+    border-style: solid;
+    border-color: var(--color1);
 }
 
 .vote{
 
 }
 
+/* custom scrollbar */
+::-webkit-scrollbar {
+    width: 20px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--color1);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--color1);
+    border-radius: 20px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: var(--color2);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--color1);
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+}
+
 #all_comments {
     height: 200px;
+    width: 550px;
     overflow-y: scroll;
     border-radius: 10px;
     background-image: url('../media/parchment.png');
     margin-left: 150px;
     margin-right: 150px;
     padding: 20px;
+    border-style: solid;
+    border-color: var(--color1);
 }
 
 #all_votes{
@@ -96,6 +125,8 @@ p.story{
     padding: 20px;
     margin-left: 40px;
     margin-right: 40px;
+    border-style: solid;
+    border-color: var(--color1);
 }
 
 .comments {
@@ -106,6 +137,10 @@ p.story{
 
 p.comment {
     display: inline-block;
+    border-style: solid;
+    border-color: var(--color1);
+    border-radius: 5px;
+    padding: 2px;
 }
 
 .titles {
@@ -115,6 +150,7 @@ p.comment {
     font-family: Arial, serif;
     font-size: 12px;
     text-align: center;
+    padding: 2px;
 }
 
 #myForm{
@@ -146,6 +182,26 @@ p.comment {
 }
 
 #userComment, #userName, #title_name {
+    border-style: solid;
+    border-color: var(--color1);
     background-image: url('../media/parchment.png');
 }
 
+#userComment {
+    border-radius: 10px;
+}
+
+.form-submit-button {
+    background: var(--color4);
+    color: var(--color3);
+    border-style: solid;
+    border-color: var(--color1);
+    height: 20px;
+    width: 55px;
+    font: bold 12px arial,sans-serif;
+    text-shadow: none;
+}
+
+.form-submit-button:hover {
+    color: var(--color2);
+}
